# aisdlc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LIFECYCLE.md  METADATA.md  Makefile  PERSONAS.md  PLAN.md  README.md  ROADMAP.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml
.secrets/: README.md  deepseek_api_key.example
infra/otel/: collector.yaml  prometheus.yml  tempo.yaml
services/core/data-api/: Dockerfile  main.go
services/core/ddl-engine/: .dockerignore  Dockerfile  README.md  go.mod  go.sum  migrations.go  smoke.sh
services/core/ddl-engine/cmd/server/: main.go
services/core/metadata-api/: Dockerfile  README.md  go.mod  go.sum  migrations.go
services/core/rules-engine/: Dockerfile  server.py
services/core/workflow-engine/: Dockerfile
services/platform/audit/: main.go
services/platform/gateway/: Dockerfile  main.go
services/platform/knowledge/: Dockerfile
services/platform/llm-gateway/: Dockerfile
services/platform/notifications/: main.go
services/platform/portal/: Dockerfile  server.js
services/workforce/agent-runtime/: Dockerfile  server.py
shared/: README.md
shared/proto/: README.md  envelope.schema.json  events.json
shared/sdk-go/: README.md  bus.go  bus_test.go  event.go  event_test.go  go.mod
shared/sdk-py/: README.md  pyproject.toml
shared/sdk-py/aisdlc/: __init__.py  bus.py  event.py
shared/sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
shared/sdk-ts/src/: bus.ts  event.ts  index.ts
shared/stub-go/: Dockerfile  go.mod  stub.go
shared/stub-py/: server.py
(+12 files in other folders)
