[project]
name = "aisdlc"
version = "0.0.1"
description = "Shared SDK for the Agentic SDLC Platform (event envelope + bus)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# nats-py + opentelemetry-sdk are optional runtime deps (the M0 skeleton is
# stdlib-only); declared as extras so `import aisdlc` never fails at M0.
dependencies = []

[project.optional-dependencies]
nats = ["nats-py>=2.7"]
otel = ["opentelemetry-sdk>=1.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aisdlc*"]
